# voxelife

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
models/cube_model/: config,json
models/deer/: config.json
models/monument/: config.json
models/skyscraper/: config.json
models/sphere/: config.json
shaders/default/: config.json  fragment.glsl  vertex.glsl
src/: Application.hpp  main.cpp
src/Engine/: Camera.cpp  EngineApp.cpp  EngineApp.h  FPSCounter.cpp  FPSCounter.h  Logger.cpp  Logger.h  Mesh.cpp  Mesh.h  Model.cpp  Screen.cpp  Screen.h  drawable.h  utils.hpp
src/Engine/GLTK/: Shader.cpp  Shader.h
src/Engine/Physics/: AABB.h
src/Engine/WS/: Core.h  Window.cpp
src/ObscureEngine/: CMakeLists.txt
src/ObscureEngine/include/ObscureEngine/: Assets.h  Camera.h  EngineApp.h  FPSCounter.h  Logger.h  Model.h  Player.h  Renderer.h  Screen.h  Voxel.h  drawable.h  utils.hpp
src/ObscureEngine/include/ObscureEngine/GLTK/: GLObject.h  Shader.h  UniformBuffer.h
src/ObscureEngine/include/ObscureEngine/Importer/: Importer.h  ModelImporter.h  ShaderImporter.h
src/ObscureEngine/include/ObscureEngine/Physics/: AABB.h  Core.h
src/ObscureEngine/include/ObscureEngine/WS/: Core.h  Event.hpp  Keyboard.hpp  Mouse.hpp  Window.h
src/ObscureEngine/src/: Camera.cpp  EngineApp.cpp  FPSCounter.cpp  Logger.cpp  Mesh.cpp  Model.cpp  ModelImporter.cpp  Player.cpp  Screen.cpp  Shader.cpp  ShaderImporter.cpp  Voxel.cpp  Window.cpp
